2000-06-29  Kazu Hirata  <kazu@hxi.com>=0A=

	* gas/h8300/h8300.exp (do_h8300s_mac): Change the registers used
	in ldmac and stmac.
	* gas/h8300/macs.s: Likewise.

2000-06-27  Nick Clifton  <nickc@cygnus.com>

	* gas/d30v/bittest.l: Edit to match new warning messages produced
	by assembler.

2000-06-19  Timothy Wall  <twall@cygnus.com>

	* gas/macros/macros.exp: Avoid tests which are not useful on tic54x.
	* gas/all/gas.exp: Make adjustments for tic54x target.
	* gas/ieee-fp/x930509a.exp: Ditto.
	* gas/tic54x/*: New tests for tic54x.  NOTE: load page has been
	moved into the LMA and is not printed separately by objdump any
	longer.  This still needs to be tested.
	
2000-06-18  Stephane Carrez  <stcarrez@worldnet.fr>

	* gas/m68k/all.exp: Don't execute tests if the target is m68hc11&12.
	* gas/m68hc11/all.exp: Specific tests for m68hc11.
	* gas/m68hc11/all_insns.[ds]: Check m68hc11 instructions.
	* gas/m68hc11/insns[ds]: Another test.
	* gas/m68hc11/lbranch.[ds]: Check branch optimization (gas relax).
	* gas/m68hc11/opers12.[ds]: New files, check m68hc12 operands.

2000-06-17  Alan Modra  <alan@linuxcare.com.au>

	* gas/macros/strings.s: Don't start directives in first column
	(for LABELS_WITHOUT_COLONS targets).

2000-06-14  H.J. Lu <hjl@gnu.org>

	* gas/macros/strings.d: Support a.out and coff.

2000-06-14  Nick Clifton  <nickc@cygnus.com>

	* gas/arm/arm6.s: Remove 'mrs r9, cpsr_all' since the cpsr_all
	flag is no longer legal syntax.

2000-06-09  Nick Clifton  <nickc@cygnus.com>

	* gas/macros/macros.exp: Run new test: strings.
	* gas/macros/strings.s: New test: String expansion inside
	macros.
	* gas/macros/strings.d: New test results.
	
2000-06-04  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/prefix.s: Modify so we have at least one x86 test that
	checks the line separator.

Sun May 21 10:08:08 2000  Hans-Peter Nilsson  <hp@axis.com>

	* gas/elf/elf.exp: Exclude *-*-linux*coff* as non-elf.

2000-05-15  Nick Clifton  <nickc@cygnus.com>
